# axum_sqlx

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/db/: connection.rs
src/model/: auth.rs  test.rs
src/router/: auth.rs  test.rs
