[package]
name = "axum_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version= "0.7.5", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors", "util"] }
